# SummarizeIt

./: .gitignore  README.md  main.py  pyproject.toml
src/summarizeit/: __init__.py  main.py
src/summarizeit/docs/: __init__.py  generator.py
src/summarizeit/fs/: __init__.py  allowed_list.py  file_utils.py
src/summarizeit/storage/: __init__.py  kv_store.py
tests/: test_allowed_list.py  test_file_utils.py  test_kv_store.py  test_main.py  tests_main.py
