[project]
name = "summarizeit"
version = "0.1.0"
description = "A small toll to summarize code"
readme = "README.md"
authors = [
    { name = "N-ONE!", email = "ai-working-group@n-one.systems" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
synchronizeit = "synchronizeit:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
