[project]
name = "summarizeit"
version = "0.2.0"
description = "A small tool to summarize code"
readme = "README.md"
authors = [
    { name = "N-ONE!", email = "ai-working-group@n-one.systems" }
]
requires-python = ">=3.12"
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
summarizeit = "summarizeit:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/summarizeit"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3,<9",
]

